--- a/style.css
+++ b/style.css
@@ -4,21 +4,51 @@
 	height: 85%;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 50px;
-	background: red;
 	color: black;
 	text-align: center;
 	font-size: 20px;
+	overflow: hidden;
+	position: relative;
+}
+.Home img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0.5;
 }
 
 .Home > div{
-	background: yellow;
 	margin: 10px;
-
+	z-index: 1;
 }
 
 .Home .navigator{
-	grid-column: 2/4;
+	grid-column: 3/3;
 	grid-row: 1/1;
+}
+
+.navigator ul{
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+	position: absolute;
+	width: 100%;
+}
+.navigator ul li{
+	font-family: arial;
+	font-size: 30px;
+	float: left;
+	width: 10%;
+}
+.navigator ul li a{
+	text-decoration: none;
+	color: white;
+	display: block;
+}
+.navigator ul li a:hover {
+	color: #fff;
+	opacity: 0.5;
+	transition: 0.3s;
 }
 
 .Home .title{
@@ -27,6 +57,7 @@
 }
 
 .footer{
+	position: relative;
 	width: 100%;
 	height: 15%;
 	background: black;
@@ -44,12 +75,11 @@
 }
 
 .header > div{
-	background: yellow;
 	margin: 10px;
 }
 
 .header .navigator{
-	grid-column: 2/4;
+	grid-column: 3/3;
 	grid-row: 1/1;
 }
 
@@ -66,11 +96,16 @@
 }
 
 .Content{
-	background: white;
+	display: grid;
+	width: 100%;
+	height: 400px;
 	font-size: 60px;
+	grid-template-columns: 1fr 1fr 1fr;
 	text-align: center;
-	width: 80%;
-	height: 1000px;
+}
+.content > div{
+	margin: 10px;
+	background: white;
 }
 
 
