--- a/95XX-G1/95XX-G6-2/css/style.css
+++ b/95XX-G1/95XX-G6-2/css/style.css
@@ -1,28 +1,31 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
 *{
     margin: 0;
     padding: 0;
     
 }
 
-body {
+html, body {
     background-color: #f1f1f1;
-    height: 100%;
-    margin: 0;
+    min-height: 100%;
+    font-family: Raleway, sans-serif;
 }
 
 /** NAVIGATION BAR **/
 nav {
     position: fixed;
+    height: 16%;
     width: 100%;
-    background: #f1f1f1;
-    height: 120px;
-    border-bottom: 3px solid #ccc;
-    z-index: 2;
+    z-index: 1;
+    color: #F6F6E8;
+    background: #404040;
 }
 
 nav ul {
     list-style: none;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul li {
@@ -35,14 +38,18 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: black;
+    color: #F6F6E8;
     display: block;
     width: 200px;
+    transition: 0.3s ease;
+    padding: 20px 0;
+    margin: 0 20px;
 }
 
 nav ul li a:hover {
-    background-color: darkgrey;
-    transition: 0.5s;
+    border-top: 4px solid #00ACE9;
+    border-bottom: 4px solid #00ACE9;
+    padding: 6px 0; 
 }
 
 
@@ -52,17 +59,17 @@ nav #logo{
 	text-align: center;
 	padding-top: 10px;
     font-size: 50px;
-    font-family: cursive;
 }
 
 /** BACKGROUND **/
 .background {
-    widows: 100%;
+    position: relative;
+    width: 100%;
     height: 100%;
-    position: absolute;
 }
 
 .background img {
+    padding-top: 1%;
     width: 100%;
     height: 90%;
     opacity: 0.9;
@@ -108,10 +115,6 @@ p {
 }
 
 /** CONTENT **/
-#main {
-    padding-top: 140px;
-}
-
 #main .title{
     width: 95%;
 	margin: 0 auto;
@@ -174,14 +177,20 @@ p {
 
 
 /** FOOTER **/
-footer {
-    bottom: 0;
-    width: 100%;
-    height: 5%;
-    background-color: #f1f1f1;
-    position: absolute;
-    line-height: 30px;
-    font-size: 20px;
+.footer {
+    position: relative;
+    background: #404040;
+    color: #F6F6E8;
+    height: 100px;
     text-align: justify;
     padding-left: 80%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.wrapper {
+    background: #eee;
+    padding-bottom: 100px;
+    padding-top: 15px;
 }
