--- a/95XX-G1/95XX-G6-1/css/style.css
+++ b/95XX-G1/95XX-G6-1/css/style.css
@@ -1,20 +1,22 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-*{
+* {
     margin: 0;
     padding: 0;
-    
+
 }
 
-html, body {
+html,
+body {
     background-color: #f1f1f1;
     min-height: 100%;
-    font-family: Raleway, sans-serif;
+    font-family: sans-serif;
 }
 
+
 /** NAVIGATION BAR **/
+
 nav {
     position: fixed;
-    height: 16%;
+    height: 23%;
     width: 100%;
     z-index: 1;
     color: #F6F6E8;
@@ -49,31 +51,30 @@ nav ul li a {
 nav ul li a:hover {
     border-top: 4px solid #00ACE9;
     border-bottom: 4px solid #00ACE9;
-    padding: 6px 0; 
+    padding: 6px 0;
 }
 
 
-nav #logo{
+nav #logo {
     top: 0;
     left: 0;
-	text-align: center;
-	padding-top: 10px;
+    text-align: center;
+    padding-top: 10px;
     font-size: 50px;
 }
 
 /** BACKGROUND **/
+
 .background {
-    position: relative;
     width: 100%;
-    height: 100%;
+
 }
 
 .background img {
-    padding-top: 1%;
     width: 100%;
-    height: 90%;
+    height: 550px;
     opacity: 0.9;
-    z-index: 1;
+    z-index: -1;
 }
 
 p {
@@ -82,16 +83,35 @@ p {
 }
 
 /** SLIDESHOW **/
-@keyframes slider{
-    0% {left: 0;}
-    20%{left: 0;}
-    25%{left: -150%;}
-    45%{left: -150%;}
-    50%{left: -250%;}
-    70%{left: -250%;}
-    75%{left: -300%;}
-    95%{left: -300%;}
-    100%{left: -400%;}
+
+@keyframes slider {
+    0% {
+        left: 0;
+    }
+    20% {
+        left: 0;
+    }
+    25% {
+        left: -150%;
+    }
+    45% {
+        left: -150%;
+    }
+    50% {
+        left: -250%;
+    }
+    70% {
+        left: -250%;
+    }
+    75% {
+        left: -300%;
+    }
+    95% {
+        left: -300%;
+    }
+    100% {
+        left: -400%;
+    }
 }
 
 #image_slider {
@@ -102,7 +122,7 @@ p {
 #image_slider figure img {
     float: left;
     width: 25%;
-    height: 350px;
+    height: 450px;
 
 }
 
@@ -115,73 +135,80 @@ p {
 }
 
 /** CONTENT **/
-#main .title{
+
+#main .title {
     width: 95%;
-	margin: 0 auto;
-	padding: 10px;
-	font-size: 20px;
-	font-weight: bold;
-	box-shadow: 2px 2px;
-	background-color: white;
+    margin: 0 auto;
+    padding: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    box-shadow: 2px 2px;
+    background: linear-gradient(to top, #09203f 0%, #537895 100%);
 }
-#main .content{
-	width: 95%;
-	margin: 5px auto 25px auto;
-	padding: 10px;
-	box-shadow: 2px 2px;
-	background-color: white;
+
+#main .content {
+    width: 95%;
+    margin: 5px auto 25px auto;
+    padding: 10px;
+    box-shadow: 2px 2px;
+    background: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    margin-bottom: 50px;
+    line-height: 25px;
 }
 
 
 /** CONTAINER **/
+
 #main {
     padding-top: 140px;
 }
 
-#container{
+#container {
     display: grid;
     grid-template-columns: 1fr 1fr;
 
 }
 
-#container h2{
+#container h2 {
     text-align: center;
     margin-bottom: 5px;
 }
 
-#container > div{
+#container > div {
     padding: 10px;
     height: 500px;
     margin: 5%;
     background-color: white;
-    border: 3px solid white;
+    line-height: 20px;
 }
 
-#container img{
+#container img {
     width: 100%;
     height: 97%;
 }
 
-#container .box img{
+#container .box img {
     width: 100%;
     height: 60%;
 }
-#container .box1 img{
+
+#container .box1 img {
     width: 100%;
     height: 87%;
 }
 
-.TextDescription{
+.TextDescription {
     padding: 15px;
 }
 
 
 /** FOOTER **/
+
 .footer {
     position: relative;
     background: #404040;
     color: #F6F6E8;
-    height: 100px;
+    height: 10%;
     text-align: justify;
     padding-left: 80%;
     bottom: 0;
@@ -190,7 +217,9 @@ p {
 }
 
 .wrapper {
-    background: #eee;
-    padding-bottom: 100px;
-    padding-top: 15px;
+    background-color: #E4E4E1;
+    background-image: radial-gradient(at top center, rgba(255, 255, 255, 0.03) 0%, rgba(0, 0, 0, 0.03) 100%), linear-gradient(to top, rgba(255, 255, 255, 0.1) 0%, rgba(143, 152, 157, 0.60) 100%);
+    background-blend-mode: normal, multiply;
+    padding-top: 36px;
+    padding-bottom: 87px;
 }
